Updates styling for homepage selections on hover to correct for additional whitespace

--- a/app/views/styles/style.css
+++ b/app/views/styles/style.css
@@ -107,8 +107,8 @@ body {
 
 .option a {
   display: block;
-  height: 99%;
-  width: 99%;
+  height: 97%;
+  width: 98.5%;
 }
 
 .team-option-gid {
